fix: prevent horizontal scrolling by adding width constraints and overflow handling

--- a/src/components/store/booking/BookingForm.scss
+++ b/src/components/store/booking/BookingForm.scss
@@ -1,4 +1,3 @@
-// BookingForm.scss
 @use '../../../styles/variables' as vars;
 @use '../../../styles/mixins' as mixins;
 
@@ -50,6 +49,12 @@
       font-family: vars.$font-primary;
       transition: vars.$transition-default;
 
+      &:focus {
+        border-color: vars.$color-accent;
+        box-shadow: 0 0 0 2px rgba(vars.$color-accent, 0.2);
+        outline: none;
+      }
+
       &:invalid:not(:focus):not(:placeholder-shown) {
         border-color: vars.$color-error;
         background-color: vars.$color-error-bg;
@@ -75,7 +80,6 @@
     &:active {
       @include mixins.fade-in-up();
     }
-
 
     &[disabled] {
       opacity: 0.8;
@@ -145,6 +149,7 @@
 
       &:focus {
         outline: 2px solid Highlight;
+        outline-offset: 2px;
       }
     }
   }
